bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_jvm_external", version = "6.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.cloud:google-cloud-storage:2.30.1",
        "info.picocli:picocli:4.7.5",
        "org.apache.commons:commons-math3:3.6.1",
        "com.google.guava:guava:32.1.3-jre",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
